--- a/kfc.html
+++ b/kfc.html
@@ -75,7 +75,7 @@
 			</div>
 			<nav id="fh5co-main-menu" role="navigation">
 				<ul>
-					<li class="fh5co-active"><a href="index.html">Home</a></li>
+					<li><a href="index.html">Home</a></li>
 
 
 						<div class="dropdown">
@@ -97,7 +97,7 @@
 						    <a href="windowdoorawnings.html">Window & Door Awnings</a>
 						  </div>
 						</div>
-						<div class="dropdown">
+						<li class="fh5co-active"><div class="dropdown"  >
 						  <a href="kfc.html"><button class="dropbtn">KFC</button></a>
 						  <div class="dropdown-content">
 						    <a href="kfchistory.html">History</a>
@@ -107,7 +107,7 @@
 						    <a href="sitesignage.html">Site Signage</a>
 						    <a href="kfcbuildingsigns.html">Building Signs</a>
 							</div>
-						</div>
+						</div></li>
 						<div class="dropdown">
 						  <a href="tacobell.html"><button class="dropbtn">Taco Bell</button></a>
 						  <div class="dropdown-content">
@@ -137,83 +137,68 @@
 					<li><a href="#"><i class="icon-instagram"></i></a></li>
 					<li><a href="#"><i class="icon-linkedin"></i></a></li>
 				</ul>
+				<ul><br><br><br>
+					 <img src="images/kfc_pictures/logos.jpg" style="width:100%">
+				</ul>
 			</div>
 
 		</aside>
 		<div id="fh5co-main">
-
+			<CENTER>
+<FORM>
+<a href="kfc-protected.html"> <input type="button"  value="Franchisee Entrance"></a>
+</FORM>
+</CENTER>
 			<div class="fh5co-narrow-content">
 				<div class="row animate-box" data-animate-effect="fadeInLeft">
 					<div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 work-item">
 						<a href="kfc.html">
 							<img src="images/work_1.jpg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
-							<h3 class="fh5co-work-title">Work Title Here</h3>
-							<p>Illustration, Branding</p>
+							<h3 class="fh5co-work-title">History</h3>
+							<p></p>
 						</a>
 					</div>
 					<div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 work-item">
 						<a href="work.html">
 							<img src="images/work_2.jpg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
-							<h3 class="fh5co-work-title">Work Title Here</h3>
-							<p>Web, Packaging</p>
+							<h3 class="fh5co-work-title">Drive Thru Components</h3>
+							<p></p>
 						</a>
 					</div>
 					<div class="clearfix visible-sm-block"></div>
 					<div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 work-item">
 						<a href="work.html">
 							<img src="images/work_3.jpg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
-							<h3 class="fh5co-work-title">Work Title Here</h3>
-							<p>Branding, Web</p>
+							<h3 class="fh5co-work-title">Window Shutter Awnings</h3>
+							<p></p>
 						</a>
 					</div>
 					<div class="clearfix visible-md-block"></div>
 					<div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 work-item">
 						<a href="work.html">
 							<img src="images/work_4.jpg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
-							<h3 class="fh5co-work-title">Work Title Here</h3>
-							<p>Logo, Branding, Web</p>
+							<h3 class="fh5co-work-title">Tower Lid</h3>
+							<p></p>
 						</a>
 					</div>
 					<div class="clearfix visible-sm-block"></div>
 					<div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 work-item">
 						<a href="work.html">
 							<img src="images/work_5.jpg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
-							<h3 class="fh5co-work-title">Work Title Here</h3>
-							<p>Web, Packaging, Branding</p>
+							<h3 class="fh5co-work-title">Site Signage</h3>
+							<p></p>
 						</a>
 					</div>
 					<div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 work-item">
 						<a href="work.html">
 							<img src="images/work_6.jpg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
-							<h3 class="fh5co-work-title">Work Title Here</h3>
-							<p>Branding</p>
+							<h3 class="fh5co-work-title">Building Signs</h3>
+							<p></p>
 						</a>
 					</div>
 					<div class="clearfix visible-md-block visible-sm-block"></div>
 
-					<div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 work-item">
-						<a href="work.html">
-							<img src="images/work_7.jpg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
-							<h3 class="fh5co-work-title">Work Title Here</h3>
-							<p>Web, Illustration</p>
-						</a>
-					</div>
-					<div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 work-item">
-						<a href="work.html">
-							<img src="images/work_8.jpg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
-							<h3 class="fh5co-work-title">Work Title Here</h3>
-							<p>Branding, Web</p>
-						</a>
-					</div>
-					<div class="clearfix visible-sm-block"></div>
-					<div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 work-item">
-						<a href="work.html">
-							<img src="images/work_1.jpg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
-							<h3 class="fh5co-work-title">Work Title Here</h3>
-							<p>Illustration, Branding</p>
-						</a>
-					</div>
-					<div class="clearfix visible-md-block"></div>
+
 
 				</div>
 			</div>
@@ -282,5 +267,7 @@ for (var i = 0; i < btns.length; i++) {
   });
 }
 </script>
+
+
 
   </html>
