--- a/pizzahut.html
+++ b/pizzahut.html
@@ -75,7 +75,7 @@
 			</div>
 			<nav id="fh5co-main-menu" role="navigation">
 				<ul>
-					<li class="fh5co-active"><a href="index.html">Home</a></li>
+					<li ><a href="index.html">Home</a></li>
 
 
 						<div class="dropdown">
@@ -118,7 +118,7 @@
 						    <a href="tacobellbuildingsigns.html">Building Signs</a>
 							</div>
 						</div>
-					<li><a href="pizzahut.html">Pizza Hut</a></li>
+					<li class="fh5co-active"><a href="pizzahut.html">Pizza Hut</a></li>
 
 					<li><a href="about.html">About</a></li>
 					<li><a href="contact.html">Contact</a></li>
@@ -136,6 +136,9 @@
 					<li><a href="#"><i class="icon-twitter"></i></a></li>
 					<li><a href="#"><i class="icon-instagram"></i></a></li>
 					<li><a href="#"><i class="icon-linkedin"></i></a></li>
+				</ul>
+				<ul><br><br><br>
+					 <img src="images/kfc_pictures/logos.jpg" style="width:100%">
 				</ul>
 			</div>
 
@@ -168,7 +171,7 @@
 					</div>
 					<div class="clearfix visible-md-block"></div>
 					<div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 work-item">
-						<a href="work.html">
+						<a href="work.html" data-lightbox="mygallery">
 							<img src="images/work_4.jpg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
 							<h3 class="fh5co-work-title">Work Title Here</h3>
 							<p>Logo, Branding, Web</p>
@@ -176,14 +179,14 @@
 					</div>
 					<div class="clearfix visible-sm-block"></div>
 					<div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 work-item">
-						<a href="work.html">
+						<a href="work.html" data-lightbox="mygallery">
 							<img src="images/work_5.jpg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
 							<h3 class="fh5co-work-title">Work Title Here</h3>
 							<p>Web, Packaging, Branding</p>
 						</a>
 					</div>
 					<div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 work-item">
-						<a href="work.html">
+						<a href="work.html" data-lightbox="mygallery">
 							<img src="images/work_6.jpg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
 							<h3 class="fh5co-work-title">Work Title Here</h3>
 							<p>Branding</p>
@@ -192,14 +195,14 @@
 					<div class="clearfix visible-md-block visible-sm-block"></div>
 
 					<div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 work-item">
-						<a href="work.html">
+						<a href="work.html" data-lightbox="mygallery">
 							<img src="images/work_7.jpg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
 							<h3 class="fh5co-work-title">Work Title Here</h3>
 							<p>Web, Illustration</p>
 						</a>
 					</div>
 					<div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 work-item">
-						<a href="work.html">
+						<a href="work.html" data-lightbox="mygallery">
 							<img src="images/work_8.jpg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
 							<h3 class="fh5co-work-title">Work Title Here</h3>
 							<p>Branding, Web</p>
@@ -207,7 +210,7 @@
 					</div>
 					<div class="clearfix visible-sm-block"></div>
 					<div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 work-item">
-						<a href="work.html">
+						<a href="work.html" data-lightbox="mygallery">
 							<img src="images/work_1.jpg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
 							<h3 class="fh5co-work-title">Work Title Here</h3>
 							<p>Illustration, Branding</p>
