--- a/contact.html
+++ b/contact.html
@@ -76,7 +76,7 @@
 			</div>
 			<nav id="fh5co-main-menu" role="navigation">
 				<ul>
-					<li class="fh5co-active"><a href="index.html">Home</a></li>
+					<li ><a href="index.html">Home</a></li>
 
 
 						<div class="dropdown">
@@ -122,7 +122,7 @@
 					<li><a href="pizzahut.html">Pizza Hut</a></li>
 
 					<li><a href="about.html">About</a></li>
-					<li><a href="contact.html">Contact</a></li>
+					<li class="fh5co-active"><a href="contact.html">Contact</a></li>
 				</ul>
 			</nav>
 
@@ -137,6 +137,9 @@
 					<li><a href="#"><i class="icon-twitter"></i></a></li>
 					<li><a href="#"><i class="icon-instagram"></i></a></li>
 					<li><a href="#"><i class="icon-linkedin"></i></a></li>
+				</ul>
+				<ul><br><br><br>
+					 <img src="images/kfc_pictures/logos.jpg" style="width:100%">
 				</ul>
 			</div>
 
