--- a/illuminatedsigns.html
+++ b/illuminatedsigns.html
@@ -75,10 +75,10 @@
 			</div>
 			<nav id="fh5co-main-menu" role="navigation">
 				<ul>
-					<li class="fh5co-active"><a href="index.html">Home</a></li>
+					<li ><a href="index.html">Home</a></li>
 
 
-						<div class="dropdown">
+						<li class="fh5co-active"><div class="dropdown">
 						  <a href="commercial.html"><button class="dropbtn">Commercial</button></a>
 						  <div class="dropdown-content">
 						    <a href="awnings.html">Awnings</a>
@@ -89,7 +89,7 @@
 						    <a href="updownlightband.html">Up/Down Light Band</a>
 								<a href="roofaccessladders.html">Roof Access Ladders</a>
 						  </div>
-						</div>
+						</div></li>
 						<div class="dropdown">
 						  <a href="residential.html"><button class="dropbtn">Residential</button></a>
 						  <div class="dropdown-content">
@@ -136,6 +136,9 @@
 					<li><a href="#"><i class="icon-twitter"></i></a></li>
 					<li><a href="#"><i class="icon-instagram"></i></a></li>
 					<li><a href="#"><i class="icon-linkedin"></i></a></li>
+				</ul>
+				<ul><br><br><br>
+					 <img src="images/kfc_pictures/logos.jpg" style="width:100%">
 				</ul>
 			</div>
 
