--- a/index.html
+++ b/index.html
@@ -131,19 +131,24 @@
 					<span>Designed by <a href="http://freehtml5.co/" target="_blank">FreeHTML5.co</a> </span>
 					<span>Demo Images: <a href="http://unsplash.com/" target="_blank">Unsplash</a></span>
 				</small></p> -->
+
 				<ul>
 					<li><a href="#"><i class="icon-facebook"></i></a></li>
 					<li><a href="#"><i class="icon-twitter"></i></a></li>
 					<li><a href="#"><i class="icon-instagram"></i></a></li>
 					<li><a href="#"><i class="icon-linkedin"></i></a></li>
 				</ul>
+				<ul><br><br><br>
+					 <img src="images/kfc_pictures/logos.jpg" style="width:100%">
+				</ul>
 			</div>
 
 		</aside>
+		<br>
 
 		<div id="fh5co-main">
 
-			<div class="fh5co-narrow-content">
+
 <!-- Slideshow -->
 				<!-- Slideshow container -->
 				<div class="slideshow-container" >
@@ -156,7 +161,7 @@
 
 					<div class="mySlides fade">
 					  <div class="numbertext">2 / 3</div>
-					  <img src="images/sunshadeLouver.jpg" style="width:100%">
+					  <img src="images/kfc_pictures/logos.jpg" style="width:100%">
 					  <div class="text">Caption Two</div>
 					</div>
 
@@ -184,77 +189,51 @@
 <!-- deneme slideshow 2 sonu -->
 			<!--	<img src="images/logo12.png" alt="Awningtec Best Awning Company" class="img-responsive"> -->
 				<!-- <h2 class="fh5co-heading animate-box" data-animate-effect="fadeInLeft">We Love To Design <span>See Our Portfolio</span></h2> -->
+				<div class="fh5co-narrow-content">
 				<div class="row animate-box" data-animate-effect="fadeInLeft">
-					<div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 work-item">
-						<a href="kfc.html">
-							<img src="images/work_1.jpg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
-							<h3 class="fh5co-work-title">Work Title Here</h3>
-							<p>Illustration, Branding</p>
-						</a>
-					</div>
-					<div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 work-item">
-						<a href="work.html">
-							<img src="images/work_2.jpg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
-							<h3 class="fh5co-work-title">Work Title Here</h3>
-							<p>Web, Packaging</p>
-						</a>
-					</div>
-					<div class="clearfix visible-sm-block"></div>
-					<div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 work-item">
-						<a href="work.html">
-							<img src="images/work_3.jpg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
-							<h3 class="fh5co-work-title">Work Title Here</h3>
-							<p>Branding, Web</p>
-						</a>
-					</div>
-					<div class="clearfix visible-md-block"></div>
-					<div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 work-item">
-						<a href="work.html">
-							<img src="images/work_4.jpg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
-							<h3 class="fh5co-work-title">Work Title Here</h3>
-							<p>Logo, Branding, Web</p>
-						</a>
-					</div>
-					<div class="clearfix visible-sm-block"></div>
-					<div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 work-item">
-						<a href="work.html">
-							<img src="images/work_5.jpg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
-							<h3 class="fh5co-work-title">Work Title Here</h3>
-							<p>Web, Packaging, Branding</p>
-						</a>
-					</div>
-					<div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 work-item">
-						<a href="work.html">
-							<img src="images/work_6.jpg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
-							<h3 class="fh5co-work-title">Work Title Here</h3>
-							<p>Branding</p>
-						</a>
-					</div>
-					<div class="clearfix visible-md-block visible-sm-block"></div>
 
-					<div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 work-item">
-						<a href="work.html">
-							<img src="images/work_7.jpg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
-							<h3 class="fh5co-work-title">Work Title Here</h3>
-							<p>Web, Illustration</p>
+					<div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 work-item" >
+						<a href="kfc.html">
+							<img src="images/small_logos\kfc-logo_small.jpg" alt="big awning and sign company" class="img-responsive">
+							<h3 class="fh5co-work-title">KFC</h3>
+							<p>Work we did for KFC restaurants.</p>
 						</a>
 					</div>
 					<div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 work-item">
 						<a href="work.html">
-							<img src="images/work_8.jpg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
-							<h3 class="fh5co-work-title">Work Title Here</h3>
-							<p>Branding, Web</p>
+							<img src="images/small_logos\taco-bell-logo-preview_small.jpg" alt="big awning and sign company" class="img-responsive">
+							<h3 class="fh5co-work-title">TACO Bell</h3>
+							<p>Work we did for TACO Bell restaurants.</p>
 						</a>
 					</div>
 					<div class="clearfix visible-sm-block"></div>
 					<div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 work-item">
 						<a href="work.html">
-							<img src="images/work_1.jpg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
-							<h3 class="fh5co-work-title">Work Title Here</h3>
-							<p>Illustration, Branding</p>
+							<img src="images/small_logos\Pizza_Hut_logo_small.jpg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
+							<h3 class="fh5co-work-title">Pizza Hut</h3>
+							<p>Pizza Hut</p>
 						</a>
 					</div>
-					<div class="clearfix visible-md-block"></div>
+					<div class="clearfix visible-sm-block"></div>
+					<div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 work-item" >
+						<a href="kfc.html">
+							<img src="images/small_logos\commercial_logo_small.jpg" alt="big awning and sign company" class="img-responsive">
+							<h3 class="fh5co-work-title">Commercial</h3>
+							<p>Our commercial awning works</p>
+						</a>
+					</div>
+					<div class="clearfix visible-sm-block"></div>
+					<div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 work-item">
+						<a href="work.html">
+							<img src="images/small_logos/residential_awning_small.jpg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
+							<h3 class="fh5co-work-title">Residential</h3>
+							<p>Our residential awning works</p>
+						</a>
+					</div>
+
+
+
+
 
 				</div>
 			</div>
