--- a/tacobellbuildingsigns.html
+++ b/tacobellbuildingsigns.html
@@ -75,7 +75,7 @@
 			</div>
 			<nav id="fh5co-main-menu" role="navigation">
 				<ul>
-					<li class="fh5co-active"><a href="index.html">Home</a></li>
+					<li ><a href="index.html">Home</a></li>
 
 
 						<div class="dropdown">
@@ -108,7 +108,7 @@
 						    <a href="kfcbuildingsigns.html">Building Signs</a>
 							</div>
 						</div>
-						<div class="dropdown">
+						<li class="fh5co-active"><div class="dropdown">
 						  <a href="tacobell.html"><button class="dropbtn">Taco Bell</button></a>
 						  <div class="dropdown-content">
 						    <a href="tacobelldrivethrucomponents.html">Drive Thru Components</a>
@@ -117,7 +117,7 @@
 						    <a href="sitesignage.html">Site Signage</a>
 						    <a href="tacobellbuildingsigns.html">Building Signs</a>
 							</div>
-						</div>
+						</div></li>
 					<li><a href="pizzahut.html">Pizza Hut</a></li>
 
 					<li><a href="about.html">About</a></li>
@@ -136,6 +136,9 @@
 					<li><a href="#"><i class="icon-twitter"></i></a></li>
 					<li><a href="#"><i class="icon-instagram"></i></a></li>
 					<li><a href="#"><i class="icon-linkedin"></i></a></li>
+				</ul>
+				<ul><br><br><br>
+					 <img src="images/kfc_pictures/logos.jpg" style="width:100%">
 				</ul>
 			</div>
 
