--- a/windowdoorawnings.html
+++ b/windowdoorawnings.html
@@ -75,7 +75,7 @@
 			</div>
 			<nav id="fh5co-main-menu" role="navigation">
 				<ul>
-					<li class="fh5co-active"><a href="index.html">Home</a></li>
+					<li ><a href="index.html">Home</a></li>
 
 
 						<div class="dropdown">
@@ -90,13 +90,13 @@
 								<a href="roofaccessladders.html">Roof Access Ladders</a>
 						  </div>
 						</div>
-						<div class="dropdown">
+						<li class="fh5co-active"><div class="dropdown">
 						  <a href="residential.html"><button class="dropbtn">Residential</button></a>
 						  <div class="dropdown-content">
 						    <a href="custompatioawnings.html">Custom Patio Awnings</a>
 						    <a href="windowdoorawnings.html">Window & Door Awnings</a>
 						  </div>
-						</div>
+						</div></li>
 						<div class="dropdown">
 						  <a href="kfc.html"><button class="dropbtn">KFC</button></a>
 						  <div class="dropdown-content">
@@ -136,6 +136,9 @@
 					<li><a href="#"><i class="icon-twitter"></i></a></li>
 					<li><a href="#"><i class="icon-instagram"></i></a></li>
 					<li><a href="#"><i class="icon-linkedin"></i></a></li>
+				</ul>
+				<ul><br><br><br>
+					 <img src="images/kfc_pictures/logos.jpg" style="width:100%">
 				</ul>
 			</div>
 
